--- a/RallyVision/res/layout/activity_menu_principal.xml
+++ b/RallyVision/res/layout/activity_menu_principal.xml
@@ -3,7 +3,7 @@
     xmlns:customfontdemo="http://schemas.android.com/apk/res-auto"
 
     android:id="@+id/RelativeLayout1"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="fill_parent"
     android:background="@drawable/carbon_fibre_texture"
     android:orientation="vertical"
@@ -82,9 +82,11 @@
         android:id="@+id/RelativeLayout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_below="@+id/linearLayout1"
+        android:layout_alignRight="@+id/ConnecLayout"
+        android:layout_alignEnd="@+id/ConnecLayout"
+        android:layout_marginTop="22dp">
 
         <TextView
             android:id="@+id/vel"
@@ -148,6 +150,94 @@
         </LinearLayout>
     </RelativeLayout>
 
+    <LinearLayout
+        android:id="@+id/slidersLayout"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@+id/zera"
+        android:layout_marginBottom="20dp"
+        android:layout_below="@+id/RelativeLayout2"
+        android:layout_alignRight="@+id/RelativeLayout2"
+        android:layout_alignEnd="@+id/RelativeLayout2"
+        android:layout_marginTop="20dp">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="0dp"
+            android:weightSum="1"
+            android:baselineAligned="false"
+            android:layout_below="@+id/linearLayout"
+            android:layout_alignRight="@+id/linearLayout"
+            android:layout_alignEnd="@+id/linearLayout">
+
+            <LinearLayout
+                android:id="@+id/MotoristaIdealLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignTop="@+id/LinearLayout02"
+                style="@style/painel"
+
+                android:orientation="horizontal">
+
+                <anastasoft.rallyvision.activity.customfontdemo.FontTextView
+                    android:id="@+id/tipoTrechoMotoristaIdeal"
+                    style="@style/trecho"
+                    android:layout_height="match_parent"/>
+
+
+            </LinearLayout>
+
+            <ProgressBar
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/progressBarMotoristaIdeal"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_marginLeft="0dp"
+            android:weightSum="1"
+            android:baselineAligned="false"
+            android:layout_below="@+id/linearLayout"
+            android:layout_alignRight="@+id/linearLayout"
+            android:layout_alignEnd="@+id/linearLayout">
+
+            <LinearLayout
+                android:id="@+id/MotoristaUsuariolLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignTop="@+id/LinearLayout02"
+                style="@style/painel"
+
+                android:orientation="horizontal">
+
+                <anastasoft.rallyvision.activity.customfontdemo.FontTextView
+                    android:id="@+id/tipoTrechoMotoristaUsuario"
+                    style="@style/trecho"
+                    android:layout_height="match_parent"/>
+
+
+            </LinearLayout>
+
+            <ProgressBar
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/progressBarMotoristaUsuário"/>
+
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 </RelativeLayout>
