--- a/RallyVision/src/main/res/values-mdpi/styles.xml
+++ b/RallyVision/src/main/res/values-mdpi/styles.xml
@@ -72,7 +72,7 @@
         <item name="android:textSize">60sp</item>
         <item name="android:topLeftRadius">3dp</item>
         <item name="android:topRightRadius">3dp</item>
-        <item name="font">digdream</item>
+        <item name="font_name">digdream</item>
 
         <item name="android:inputType">number</item>
 
@@ -92,7 +92,7 @@
         <item name="android:textSize">60sp</item>
         <item name="android:topLeftRadius">3dp</item>
         <item name="android:topRightRadius">3dp</item>
-        <item name="font">digdream</item>
+        <item name="font_name">digdream</item>
 
         <item name="android:inputType">number</item>
 
@@ -112,7 +112,7 @@
 
         <item name="android:textSize">27sp</item>
         <item name="android:inputType">text</item>
-        <item name="font">dig7Reg</item>
+        <item name="font_name">dig7Reg</item>
 
         <item name="android:text">-</item>
 
@@ -123,7 +123,7 @@
         <item name="android:inputType">text</item>
         <item name="android:padding">0dp</item>
 
-        <!--<item name="font">dig7Reg</item>-->
+        <!--<item name="font_name">dig7Reg</item>-->
         <item name="android:text">-</item>
     </style>
 
