--- a/RallyVision/src/main/res/values-small-land-mdpi/styles.xml
+++ b/RallyVision/src/main/res/values-small-land-mdpi/styles.xml
@@ -65,7 +65,7 @@
         <item name="android:textSize">35sp</item>
         <item name="android:topLeftRadius">30dp</item>
         <item name="android:topRightRadius">30dp</item>
-        <item name="font">digdream</item>
+        <item name="font_name">digdream</item>
         <item name="android:inputType">number</item>
     </style>
     <style name="velocimetro_azul">
@@ -80,7 +80,7 @@
         <item name="android:textSize">100sp</item>
         <item name="android:topLeftRadius">30dp</item>
         <item name="android:topRightRadius">30dp</item>
-        <item name="font">digdream</item>
+        <item name="font_name">digdream</item>
         <item name="android:inputType">number</item>
     </style>
 
@@ -107,7 +107,7 @@
 
         <item name="android:textSize">16sp</item>
         <item name="android:inputType">text</item>
-        <item name="font">dig7Reg</item>
+        <item name="font_name">dig7Reg</item>
         <item name="android:text">-</item>
 
     </style>
@@ -116,7 +116,7 @@
 
         <item name="android:textSize">12sp</item>
         <item name="android:inputType">text</item>
-        <!--<item name="font">dig7Reg</item>-->
+        <!--<item name="font_name">dig7Reg</item>-->
         <item name="android:text">-</item>
         <item name="android:padding">0dp</item>
 
