--- a/RallyVision/src/main/res/values-small-land/styles.xml
+++ b/RallyVision/src/main/res/values-small-land/styles.xml
@@ -72,7 +72,7 @@
         <item name="android:typeface">normal</item>
         <item name="android:inputType">number</item>
 
-        <item name="font">digdream</item>
+        <item name="font_name">digdream</item>
 
     </style>
 
@@ -94,7 +94,7 @@
         <item name="android:typeface">normal</item>
         <item name="android:inputType">number</item>
 
-        <item name="font">digdream</item>
+        <item name="font_name">digdream</item>
 
     </style>
 
@@ -127,7 +127,7 @@
 
         <item name="android:textSize">44sp</item>
         <item name="android:inputType">text</item>
-        <item name="font">dig7Reg</item>
+        <item name="font_name">dig7Reg</item>
         <item name="android:text">-</item>
 
 
@@ -137,7 +137,7 @@
 
         <item name="android:textSize">30sp</item>
         <item name="android:inputType">text</item>
-        <!--<item name="font">dig7Reg</item>-->
+        <!--<item name="font_name">dig7Reg</item>-->
         <item name="android:padding">0dp</item>
 
         <item name="android:text">-</item>
