--- a/RallyVision/src/main/res/values-small-port/styles.xml
+++ b/RallyVision/src/main/res/values-small-port/styles.xml
@@ -65,7 +65,7 @@
         <item name="android:textSize">43sp</item>
         <item name="android:topLeftRadius">30dp</item>
         <item name="android:topRightRadius">30dp</item>
-        <item name="font">digdream</item>
+        <item name="font_name">digdream</item>
         <item name="android:inputType">number</item>
     </style>
 
@@ -81,7 +81,7 @@
         <item name="android:textSize">74sp</item>
         <item name="android:topLeftRadius">30dp</item>
         <item name="android:topRightRadius">30dp</item>
-        <item name="font">digdream</item>
+        <item name="font_name">digdream</item>
         <item name="android:inputType">number</item>
     </style>
 
@@ -109,7 +109,7 @@
 
         <item name="android:textSize">39sp</item>
         <item name="android:inputType">text</item>
-        <item name="font">dig7Reg</item>
+        <item name="font_name">dig7Reg</item>
         <item name="android:text">-</item>
 
 
@@ -118,7 +118,7 @@
 
         <item name="android:textSize">30sp</item>
         <item name="android:inputType">text</item>
-        <!--<item name="font">dig7Reg</item>-->
+        <!--<item name="font_name">dig7Reg</item>-->
         <item name="android:text">-</item>
         <item name="android:padding">0dp</item>
 
