--- a/RallyVision/src/main/res/values-xlarge/styles.xml
+++ b/RallyVision/src/main/res/values-xlarge/styles.xml
@@ -65,7 +65,7 @@
         <item name="android:topRightRadius">30dp</item>
         <item name="android:typeface">normal</item>
         <item name="android:inputType">number</item>
-        <item name="font">digdream</item>
+        <item name="font_name">digdream</item>
 
     </style>
 
