--- a/RallyVision/src/main/res/values/styles.xml
+++ b/RallyVision/src/main/res/values/styles.xml
@@ -99,7 +99,7 @@
         <item name="android:topRightRadius">30dp</item>
         <item name="android:typeface">normal</item>
         <item name="android:inputType">number</item>
-        <item name="font">digdream</item>
+        <item name="font_name">digdream</item>
 
 
     </style>
@@ -120,7 +120,7 @@
 
         <item name="android:textSize">44sp</item>
         <item name="android:inputType">text</item>
-        <item name="font">dig7Reg</item>
+        <item name="font_name">dig7Reg</item>
 
         <item name="android:text">-</item>
     </style>
@@ -130,7 +130,7 @@
         <item name="android:textSize">28sp</item>
         <item name="android:inputType">text</item>
         <item name="android:padding">0dp</item>
-        <!--<item name="font">dig7Reg</item>-->
+        <!--<item name="font_name">dig7Reg</item>-->
         <item name="android:text">-</item>
     </style>
 
