--- a/RallyVision/src/main/res/layout/lista.xml
+++ b/RallyVision/src/main/res/layout/lista.xml
@@ -6,7 +6,7 @@
     xmlns:swipe="http://schemas.android.com/apk/res-auto">
 
 
-   <com.fortysevendeg.swipelistview.SwipeListView
+   <com.fortysevendeg.android.swipelistview.SwipeListView
             android:id="@+id/example_swipe_lv_list"
             android:listSelector="#00000000"
             android:layout_width="fill_parent"
